--- a/src/components/layouts/Footer.module.scss
+++ b/src/components/layouts/Footer.module.scss
@@ -1,7 +1,7 @@
 .footer {
   width: 100%;
   padding: 20px 0;
-  background-color: #f8f8f8;
+  background-color: #fff;
   text-align: center;
   font-size: 14px;
   color: #555;
