--- a/src/components/common/Card.module.scss
+++ b/src/components/common/Card.module.scss
@@ -1,40 +1,135 @@
-.card {
-    width: 375px;
+.cardWrapper {
+    position: relative;
+  }
+  
+  .card {
+    min-height: 511px;
+    min-width: 375px;
     background: white;
-    padding: 16px;
     border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    padding: 16px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
   
+    /* Image Section */
     .cardImage {
       position: relative;
-      img {
+  
+      .image {
         border-radius: 10px;
+        object-fit: cover;
+        max-width: 343px;
+        max-height: 220px;
       }
+
+      .modalText {
+        padding-bottom: 20px;
+      }
+  
       .shareIcon {
         position: absolute;
+        padding: 0;
         top: 10px;
         right: 10px;
+        z-index: 10;
       }
     }
   
+    /* Card Content */
     .cardContent {
       display: flex;
       flex-direction: column;
-      gap: 10px;
-      h3 {
-        font-size: 20px;
-        font-weight: bold;
+      gap: 24px;
+    }
+  
+    .cardTitle {
+      font-size: 20px;
+      font-weight: 500;
+      color: #252525;
+      text-align: left;
+    }
+  
+    .cardLocation {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      font-size: 16px;
+      color: #929292;
+      font-weight: 500;
+    }
+  
+    /* Room Info */
+    .roomInfo {
+      display: flex;
+      justify-content: space-between;
+  
+      .infoItem {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 8px;
+        font-size: 14px;
+        color: #929292;
       }
     }
   
+    /* Price */
     .price {
       font-size: 24px;
-      font-weight: bold;
-      span {
+      font-weight: 700;
+      color: #252525;
+      display: flex;
+      align-items: center;
+  
+      .currency {
         text-decoration: underline;
+        margin-left: 4px;
+      }
+    }
+  
+    /* Learn More */
+    .learnMore {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-size: 14px;
+      font-weight: 700;
+      color: #999999;
+      cursor: pointer;
+  
+      &:hover {
+        color: #1aa683;
+      }
+    }
+  }
+  
+  /* Last Overlay */
+  .lastOverlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.6);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    z-index: 50;
+  
+    .viewAllButton {
+      padding: 20px 24px;
+      background: #1aa683;
+      color: white;
+      font-size: 16px;
+      font-weight: 500;
+      border-radius: 10px;
+      cursor: pointer;
+  
+      &:hover {
+        background: #159a6b;
       }
     }
   }
