--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -22,6 +22,23 @@ body {
   color: #252525;
   background-color: #ffffff;
   line-height: 1.5;
+  height: 100%;
+}
+
+#root,
+#__next {
+  height: 100%;
+}
+
+.app-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content-wrapper {
+  flex: 1;
+  align-content: center;
 }
 
 /* Headings */
@@ -91,7 +108,6 @@ button:disabled {
   background-color: #b5b7c0;
   cursor: not-allowed;
 }
-
 
 input:focus,
 select:focus,
