--- a/src/app/(profile)/layout.module.scss
+++ b/src/app/(profile)/layout.module.scss
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  margin-bottom: 50px;
 }
 .loadingScreen {
   width: 100vw;
@@ -53,14 +53,13 @@
 }
 .mainWrapper {
   display: flex;
-  flex: 1;
+  gap: 40px;
 }
 .navbar {
   width: 300px;
   padding: 20px 0 30px;
-  border: 1px solid #e5e7eb;
-  border-radius: 12px;
-  margin-right: 24px;
+  border: 1px solid #EBEBEB;
+  border-radius: 10px;
   background-color: #fff;
 }
 .profileBlock {
@@ -79,7 +78,8 @@
   position: absolute;
   bottom: 8px;
   right: 8px;
-  background-color: #fff;
+  background-color:#252525;
+  color: #fff;
   border-radius: 50%;
   padding: 4px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
@@ -92,7 +92,7 @@
 }
 .content {
   flex: 1;
-  padding: 16px;
+  border-radius: 10px;  
 }
 .customMenu {
   list-style: none;
