--- a/src/app/(profile)/profile/Profile.module.scss
+++ b/src/app/(profile)/profile/Profile.module.scss
@@ -4,12 +4,12 @@
   padding: 24px;
   border-radius: 10px;
   width: 100%;
+  height: 750px !important;
 }
 
 .formRow {
   display: flex;
-  gap: 16px;
-  margin-bottom: 16px;
+  gap: 20px;
 
   > .ant-form-item {
     flex: 1;
@@ -68,4 +68,82 @@
   background-color: #1890ff;
   color: #fff;
 }
- 
+
+.passwordField {
+  position: relative;
+  margin-bottom: 16px;
+}
+
+.passwordToggleIcon {
+  position: absolute;
+  top: 52px;
+  right: 12px;
+  cursor: pointer;
+  color: #999;
+  font-size: 18px;
+}
+.formItem {
+  width: 440px !important;
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  color: #25252580 !important;
+  line-height: 18px !important;
+  margin: 0 !important;
+}
+.formInput{
+  border-radius: 10px !important;
+  border:1px solid #EBEBEB !important;
+  padding: 15px 16px !important;
+}
+.formSelect{
+  height: 54px !important;
+}
+.wrapperInner{
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+.wrapper{
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+.editBtn{
+  border-radius: 5px;
+  background-color: #32343A;
+  height: 45px;
+  border:none;
+  font-weight: 700;
+  font-size: 14px;
+  color: #fff;
+  width: 175px;
+}
+.editBtn:hover{
+  background-color: #35373e !important;
+  color: #fff !important;
+}
+.saveBtn{
+  border-radius: 5px;
+  background-color: #1AA683 !important;
+  height: 45px;
+  border:none;
+  font-weight: 700;
+  font-size: 14px;
+  color: #fff !important;
+  width: 175px;
+}
+.saveBtn:hover{
+  color: #fff !important;
+
+}
+.editPassword{
+  border-radius: 5px !important;
+  background-color: transparent !important;
+  color:#252525 !important;
+  border: 1px solid #252525 !important;
+  height: 45px;
+  font-weight: 700;
+  font-size: 14px;
+  width: 175px;
+}
