--- a/src/app/(profile)/profile/Profile.scss
+++ b/src/app/(profile)/profile/Profile.scss
@@ -4,6 +4,7 @@
   padding: 24px;
   border-radius: 10px;
   width: 100%;
+  height: 750px !important;
 }
 
 .formRow {
@@ -51,7 +52,7 @@
 
 .hero-calendar {
   border: 1px solid #d9d9d9;
-  border-radius: 4px;
+  border-radius: 10px;
   box-shadow: none;
 }
 
@@ -67,4 +68,24 @@
 .hero-calendar .selected {
   background-color: #1890ff;
   color: #fff;
+}
+
+.passwordField {
+  position: relative;
+  margin-bottom: 16px;
+}
+
+.passwordToggleIcon {
+  position: absolute;
+  top: 52px;
+  right: 12px;
+  cursor: pointer;
+  color: #999;
+  font-size: 18px;
+}
+.ant-col.ant-form-item-label label{
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  color: #25252580 !important;
+  line-height: 18px !important;
 }
