--- a/src/app/(profile)/questionnaire/Questionnaire.scss
+++ b/src/app/(profile)/questionnaire/Questionnaire.scss
@@ -2,7 +2,7 @@
   position: relative;
   background-color: #fff;
   border: 1px solid #ebebeb;
-  padding: 40px;
+  padding: 24px;
   border-radius: 10px !important;
   width: 100%;
   min-height: 750px !important;
@@ -24,12 +24,10 @@
 }
 .modalBox {
   background-color: #fff;
-  border: 1px solid #B5B7C0 !important;
-  border-radius: 10px !important;
+  border-radius: 10px;
+  padding: 24px;
   text-align: center;
   width: 400px;
-  padding: 36px;
-  padding-top: 24px;
 }
 .modalBox h3 {
   margin: 16px 0 8px;
@@ -37,9 +35,15 @@
   font-weight: 700;
   color: #32343a;
 }
+.modalBox p {
+  margin-bottom: 24px;
+  font-size: 14px;
+  color: #252525;
+}
 .questionBlock {
   display: flex;
   flex-direction: column;
+  gap: 12px;
 }
 .questionBlock h3 {
   margin: 0;
@@ -53,10 +57,10 @@
   color: #252525;
 }
 .radioItem {
-  display: flex;
-  gap: 5px !important;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  display: block;
+  margin: 8px 0;
+  font-size: 14px;
+  color: #252525;
 }
 .btnRow {
   margin-top: auto;
@@ -84,37 +88,8 @@
   margin-bottom: 24px;
   max-width: 600px;
 }
-.modelTitleNot {
-  font-size: 16px !important;
-  font-weight: 700 !important;
-  color: #252525 !important;
-  margin: 0 !important;
-  margin-bottom: 16px !important;
-}
-.modelSubtitleNot {
-  font-weight: 400 !important;
-  font-size: 14px !important;
-  color: #252525 !important;
-  margin-bottom: 20px !important;
-}
-.anketaStart {
-  width: 280px;
-  height: 40px;
-  background-color: #1AA683;
-  color: #fff !important;
-  border: none !important;
-}
-.anketaStart:hover {
-  background-color: #137f64 !important;
-  color: #fff !important;
-  border: none !important;
-}
-.question{
-  font-size: 16px !important;
-  font-weight: 600 !important;
-  margin-bottom: 20px !important;
-}
-.label{
-  font-size: 14px !important;
-  font-weight: 400 !important;
+.Questionnaire-module-scss-module__7T2zMW__overlay {
+  border-radius: 10px !important;
+  background-color: #ebebeb8a !important;
+  opacity: 1 !important;
 }
