refactor: remove unused AdCard component and styles; add loading state to Apartments page

--- a/src/app/apartments/Apartments.module.scss
+++ b/src/app/apartments/Apartments.module.scss
@@ -6,6 +6,12 @@
   margin-top: 20px;
 }
 
+.loadingScreen {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .rightColumn {
   display: flex;
   flex-direction: column;
