--- a/src/app/(profile)/questionnaire/Questionnaire.module.scss
+++ b/src/app/(profile)/questionnaire/Questionnaire.module.scss
@@ -24,7 +24,7 @@
 }
 .modalBox {
   background-color: #fff;
-  border: 1px solid #B5B7C0 !important;
+  border: 1px solid #b5b7c0 !important;
   border-radius: 10px !important;
   text-align: center;
   width: 400px;
@@ -100,7 +100,7 @@
 .anketaStart {
   width: 280px;
   height: 40px;
-  background-color: #1AA683;
+  background-color: #1aa683;
   color: #fff !important;
   border: none !important;
 }
@@ -109,12 +109,12 @@
   color: #fff !important;
   border: none !important;
 }
-.question{
+.question {
   font-size: 16px !important;
   font-weight: 600 !important;
   margin-bottom: 20px !important;
 }
-.label{
+.label {
   font-size: 14px !important;
   font-weight: 400 !important;
 }
