--- a/src/app/(profile)/layout.module.scss
+++ b/src/app/(profile)/layout.module.scss
@@ -58,7 +58,7 @@
 .navbar {
   width: 300px;
   padding: 20px 0 30px;
-  border: 1px solid #EBEBEB;
+  border: 1px solid #ebebeb;
   border-radius: 10px;
   background-color: #fff;
 }
@@ -78,7 +78,7 @@
   position: absolute;
   bottom: 8px;
   right: 8px;
-  background-color:#252525;
+  background-color: #252525;
   color: #fff;
   border-radius: 50%;
   padding: 4px;
@@ -92,7 +92,7 @@
 }
 .content {
   flex: 1;
-  border-radius: 10px;  
+  border-radius: 10px;
 }
 .customMenu {
   list-style: none;
@@ -127,7 +127,7 @@
   width: 6px;
   height: 40px;
   border-radius: 0 10px 10px 0;
-  background-color: #1AA683;
+  background-color: #1aa683;
 }
 .customMenuIcon {
   margin-right: 16px;
