--- a/src/app/not-found.module.scss
+++ b/src/app/not-found.module.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito+Sans');
+@import url("https://fonts.googleapis.com/css?family=Nunito+Sans");
 
 :root {
   --blue: #252525;
@@ -52,7 +52,7 @@
 
 /* Button */
 .btn {
-  background: var(--green );
+  background: var(--green);
   max-width: 180px;
   color: #fff;
   font-weight: bold;
@@ -66,6 +66,6 @@
   font-size: 14px;
 
   &:hover {
-  color: #fff;
+    color: #fff;
   }
 }
