--- a/src/app/(profile)/questionnaire/Questionnaire.module.scss
+++ b/src/app/(profile)/questionnaire/Questionnaire.module.scss
@@ -24,7 +24,7 @@
 }
 .modalBox {
   background-color: #fff;
-  border: 1px solid #B5B7C0 !important;
+  border: 1px solid #b5b7c0 !important;
   border-radius: 10px !important;
   text-align: center;
   width: 400px;
@@ -58,19 +58,25 @@
   padding-top: 10px;
   padding-bottom: 10px;
 }
+.btnSuccess {
+  margin-top: auto;
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+}
 .btnRow {
   margin-top: auto;
   display: flex;
   gap: 12px;
-  justify-content: flex-end;
+  justify-content: end;
 }
 .successContainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-self: center;
+  margin: auto 0;
   text-align: center;
-  flex: 1;
 }
 .successContainer h2 {
   font-size: 18px;
@@ -100,7 +106,7 @@
 .anketaStart {
   width: 280px;
   height: 40px;
-  background-color: #1AA683;
+  background-color: #1aa683;
   color: #fff !important;
   border: none !important;
 }
@@ -109,12 +115,66 @@
   color: #fff !important;
   border: none !important;
 }
-.question{
+.question {
   font-size: 16px !important;
   font-weight: 600 !important;
   margin-bottom: 20px !important;
 }
-.label{
+.label {
   font-size: 14px !important;
   font-weight: 400 !important;
+}
+.nextBtn {
+  background-color: #32343a !important;
+  border-radius: 5px !important;
+  height: 40px;
+  font-size: 14px !important;
+  font-weight: 700;
+  padding: 0 40px;
+}
+.previousBtn {
+  border-radius: 5px !important;
+  height: 40px;
+  font-size: 14px !important;
+  font-weight: 700;
+  border: none;
+  box-shadow: none;
+}
+.previousBtn:hover {
+  color: #4d5059 !important;
+}
+.iconSuccess {
+  font-size: 48;
+  color: #1aa683;
+  margin: 0 auto 16px;
+}
+.reinput {
+  height: 40px;
+  padding: 0 20px;
+  background-color: #32343a;
+  color: #fff;
+  font-size: 14px !important;
+  font-weight: 700;
+  border: none;
+  box-shadow: none;
+}
+.reinput:hover {
+  color: #fff !important;
+  background-color: #313339 !important;
+  border: none;
+}
+.preview {
+  height: 40px;
+  padding: 0 20px;
+  background-color: #1AA683 !important;
+  color: #fff;
+  font-size: 14px !important;
+  font-weight: 700;
+  border: none;
+  box-shadow: none;
+}
+.preview:hover {
+  color: #fff !important;
+  background-color: #179475 !important;
+  border: none;
 }
