--- a/src/app/(profile)/components/desktop/Questionnaire/QuestionnaireForm.module.scss
+++ b/src/app/(profile)/components/desktop/Questionnaire/QuestionnaireForm.module.scss
@@ -22,6 +22,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 10px !important;
+  background-color: #ebebeb8a !important;
+  opacity: 1 !important;
 }
 
 .modalBox {
