--- a/src/app/(profile)/components/desktop/MyAnnouncements/AnnouncementsList.scss
+++ b/src/app/(profile)/components/desktop/MyAnnouncements/AnnouncementsList.scss
@@ -2,6 +2,6 @@
   color: #1aa683 !important;
   text-shadow: none !important;
 }
-.ant-tabs-tab:hover{
-  color: #32343A !important;
+.ant-tabs-tab:hover {
+  color: #32343a !important;
 }
