Fix the landing card

--- a/src/components/common/SearchBar.module.scss
+++ b/src/components/common/SearchBar.module.scss
@@ -19,8 +19,8 @@
   .searchBarForm {
     width: 100%;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    gap: 10px;
 
     @media (max-width: 768px) {
       flex-direction: column;
