--- a/src/app/(auth)/login/Login.module.scss
+++ b/src/app/(auth)/login/Login.module.scss
@@ -1,36 +1,28 @@
+// src/app/(auth)/login/Login.module.scss
+@import "../_auth-styles.scss";
+
 .container {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
+  @include auth-container;
 }
 
 .formWrapper {
-  max-width: 600px;
-  width: 100%;
-  border-radius: 16px;
-  padding: 70px 100px;
-  background-color: white;
-  border: 1px solid #f5f5f5;
+  @include auth-form-wrapper;
 }
 
 .header {
-  text-align: center;
-  margin-bottom: 40px;
-
-  h2 {
-    font-size: 24px;
-    font-weight: 600;
-    color: #252525;
-  }
+  @include auth-header;
 }
 
 .formGroup {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 14px;
+  @include auth-form-group;
+}
+
+.submitButton {
+  @include auth-button-primary;
+}
+
+.footer {
+  @include auth-footer;
 }
 
 .rememberForgot {
@@ -38,11 +30,19 @@
   width: 100%;
   justify-content: space-between;
   align-items: center;
-  margin: 14px 0;
+  margin: 16px 0;
+
+  @media (max-width: 767px) {
+    margin: 12px 0;
+  }
 }
 
 .rememberMe span {
   font-size: 14px !important;
+
+  @media (max-width: 767px) {
+    font-size: 13px !important;
+  }
 }
 
 .forgotPassword {
@@ -53,35 +53,8 @@
   &:hover {
     text-decoration: underline;
   }
-}
 
-.submitButton {
-  width: 100%;
-  background-color: #1aa683;
-  color: white;
-  border-radius: 8px;
-  font-weight: 600;
-  padding: 12px 0;
-  transition: background-color 0.2s;
-
-  &:hover {
-    background-color: darken(#1aa683, 5%);
-  }
-}
-
-.footer {
-  text-align: center;
-  margin-top: 20px;
-  color: #666;
-  font-size: 14px;
-
-  a {
-    color: #1aa683;
-    text-decoration: none;
-    margin-left: 5px;
-
-    &:hover {
-      text-decoration: underline;
-    }
+  @media (max-width: 767px) {
+    font-size: 13px;
   }
 }
