--- a/src/app/(auth)/register/Register.module.scss
+++ b/src/app/(auth)/register/Register.module.scss
@@ -1,67 +1,60 @@
+// src/app/(auth)/login/Login.module.scss
+@import "../_auth-styles.scss";
+
 .container {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
+  @include auth-container;
 }
 
 .formWrapper {
-  max-width: 600px;
-  width: 100%;
-  border-radius: 16px;
-  padding: 70px 100px;
-  background-color: white;
-  border: 1px solid #f5f5f5;
+  @include auth-form-wrapper;
 }
 
 .header {
-  text-align: center;
-  margin-bottom: 40px;
-
-  h2 {
-    font-size: 24px;
-    font-weight: 600;
-    color: #252525;
-  }
+  @include auth-header;
 }
 
 .formGroup {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 14px;
-  margin-bottom: 24px;
+  @include auth-form-group;
 }
 
 .submitButton {
-  margin-top: 16px;
-  width: 100%;
-  background-color: #1aa683;
-  color: white;
-  border-radius: 8px;
-  font-weight: 600;
-  padding: 12px 0;
-  transition: background-color 0.2s;
-
-  &:hover {
-    background-color: darken(#1aa683, 5%);
-  }
+  @include auth-button-primary;
 }
 
 .footer {
-  text-align: center;
-  margin-top: 20px;
-  color: #666;
+  @include auth-footer;
+}
+
+.rememberForgot {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  margin: 16px 0;
+
+  @media (max-width: 767px) {
+    margin: 12px 0;
+  }
+}
+
+.rememberMe span {
+  font-size: 14px !important;
+
+  @media (max-width: 767px) {
+    font-size: 13px !important;
+  }
+}
+
+.forgotPassword {
+  color: #1aa683;
+  text-decoration: none;
   font-size: 14px;
 
-  a {
-    color: #1aa683;
-    text-decoration: none;
-    margin-left: 5px;
+  &:hover {
+    text-decoration: underline;
+  }
 
-    &:hover {
-      text-decoration: underline;
-    }
+  @media (max-width: 767px) {
+    font-size: 13px;
   }
 }
